# Practicas-FSIV

Practica1 Resuelta/: CMakeCache.txt  CMakeLists.txt  Ej1.cpp  Ej1v1.0.cpp  Makefile  README.txt  Realzar_primer_plano  cmake_install.cmake  script.sh
Practica1 Resuelta/fsiv_tutorial_opencv/: CMakeCache.txt  Makefile  cmake_install.cmake  comp_stats  esqueleto  show_img  show_img.cc  show_video  show_video.cc
Practica1 Resuelta/i72mumam/: CMakeCache.txt  LEEME.txt  Makefile  Realzar_primer_plano  cmake_install.cmake
Practica2 Resuelta/color_balance/: CMakeCache.txt  LEEME.txt  Makefile  cmake_install.cmake  color_balance  color_balanceV1.cc  script.sh
Practica2 Resuelta/color_balance/i72mumam/: CMakeLists.txt  (+1 more)
Practica3 Resuelta/usm_enhance/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  usm_enhance  usm_enhanceV1.cc  usm_enhanceV2.cc
Practica4 Resuelta/aug_real/: aug_real  aug_real.cpp  calibrate_camera  common.cpp  ejemplo_reconstruccion.cpp  patata.yml
Practica5 Resuelta/blur_background/: CMakeCache.txt  CMakeLists.txt  LEEME.txt  Makefile  blur_background  cmake_install.cmake
Practica6 Resuelta/: lbp.cpp
Practica6 Resuelta/traffic_sign_classifier/: CHANGELOG.TXT  CMakeCache.txt  CMakeLists.txt  LEEME.txt  Makefile  Readme.txt  cmake_install.cmake  common_code.cpp  metrics.cpp  test_image  test_lbp  train_test_clf
Practica6 Resuelta/traffic_sign_classifier/Data/: class_shapes.txt
Practica6 Resuelta/traffic_sign_classifier/i72mumam/: common_code.hpp  lbp.cpp  lbp.hpp  metrics.hpp  test_image.cpp  test_lbp.cpp  train_test_clf.cpp
(+14 files in other folders)
